--- a/src/boinc-6.12.38/packages/solaris/CSW/boincdevel/Makefile
+++ b/src/boinc-6.12.38/packages/solaris/CSW/boincdevel/Makefile
@@ -77,14 +77,14 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run aclocal-1.11
 ALLOCA = 
-AMTAR = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run tar
+AMTAR = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run tar
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run automake-1.11
 AWK = gawk
 BOINC_EXTRA_LIBS =  -L/data/local/tmp/lib -lcurl -L/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm//usr/lib -lssl -lcrypto -ldl -ldl -lz
 BOINC_MAJOR_VERSION = 6
@@ -152,7 +152,7 @@ LN = /bin/ln
 LN_S = ln -s
 LOGNAME = mat
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 MYSQL_CFLAGS = 
@@ -196,7 +196,7 @@ SSL_CFLAGS =
 SSL_CXXFLAGS =  
 SSL_LIBS = -lssl -lcrypto -ldl
 STRIP = strip
-TOP_BUILD_DIR = /home/mat/docs/src/android/boinc-6.12.38
+TOP_BUILD_DIR = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38
 VERSION = 6.12.38
 WHOAMI = /usr/bin/whoami
 WX_CFLAGS = 
@@ -217,10 +217,10 @@ X_CFLAGS =
 X_EXTRA_LIBS = 
 X_LIBS =  -L/usr/lib
 X_PRE_LIBS = 
-abs_builddir = /home/mat/docs/src/android/boinc-6.12.38/packages/solaris/CSW/boincdevel
-abs_srcdir = /home/mat/docs/src/android/boinc-6.12.38/packages/solaris/CSW/boincdevel
-abs_top_builddir = /home/mat/docs/src/android/boinc-6.12.38
-abs_top_srcdir = /home/mat/docs/src/android/boinc-6.12.38
+abs_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/packages/solaris/CSW/boincdevel
+abs_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/packages/solaris/CSW/boincdevel
+abs_top_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38
+abs_top_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38
 ac_ct_AR = ar
 ac_ct_CC = 
 ac_ct_CXX = 
@@ -234,7 +234,7 @@ am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
 boinc_alt_platform = 
-boinc_platform = arm-unknown-linux-gnu
+boinc_platform = arm-android-linux-gnu
 build = x86_64-unknown-linux-gnu
 build_alias = 
 build_cpu = x86_64
@@ -254,7 +254,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/mat/docs/src/android/boinc-6.12.38/install-sh
+install_sh = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.12.38/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
