--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="15"
-      android:versionName="0.3.6a">
+      android:versionCode="16"
+      android:versionName="0.3.6.1a">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
 
 	<supports-screens
@@ -59,6 +59,16 @@
 		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_WIDGET_UPDATE" />
 		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_WIDGET_PREPARE_UPDATE" />
 		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_START_STOP" />
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_0"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_1"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_2"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_3"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_4"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_5"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_6"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_7"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_8"/>
+		    	<action android:name="sk.boinc.nativeboinc.widget.TABLET_CLIENT_TASK_INFO_9"/>
 		    </intent-filter>
 			<meta-data android:name="android.appwidget.provider"
 				android:resource="@xml/tablet_widget_info" />
@@ -150,7 +160,12 @@
 		<activity android:name=".ShutdownDialogActivity"
 			android:screenOrientation="portrait"
 			android:launchMode="singleInstance"
-			android:theme="@android:style/Theme.Dialog" />
+			android:theme="@style/StandaloneDialog" />
+		
+		<activity android:name=".TaskInfoDialogActivity"
+			android:screenOrientation="portrait"
+			android:launchMode="singleInstance"
+			android:theme="@style/StandaloneDialog" />
 		
 		<activity android:name=".LocalPreferencesActivity"
 			android:label="@string/localPreferences"
