--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -37,9 +37,7 @@
 				android:description="@string/install_service_desc" />
 		<service android:name=".nativeclient.NativeBoincService"
 				android:description="@string/nboinc_service_desc" />
-		<service android:name=".widget.NativeBoincWidgetService"
-				android:description="@string/widget_service_desc" />
-
+		
 		<receiver android:name=".widget.NativeBoincWidgetProvider"
 		    android:label="@string/widget2x1">
 			<intent-filter>
@@ -169,6 +167,9 @@
 		
 		<activity android:name=".LocalPreferencesActivity"
 			android:label="@string/localPreferences"
+			android:launchMode="singleTop" />
+		
+		<activity android:name=".TimePreferencesActivity"
 			android:launchMode="singleTop" />
 	</application>
     
