--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="22"
-      android:versionName="0.3.7.3a">
+      android:versionCode="23"
+      android:versionName="0.3.8a">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
 
 	<supports-screens
@@ -143,7 +143,7 @@
 			android:label="@string/installingUpdating" />
 		
 		<activity android:name=".ScreenLockActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+			android:theme="@style/ScreenLockScreen"
 			android:screenOrientation="landscape"
 			android:launchMode="singleTop" />
 		
@@ -156,12 +156,10 @@
 			android:launchMode="singleTop" />
 			
 		<activity android:name=".ShutdownDialogActivity"
-			android:screenOrientation="portrait"
 			android:launchMode="singleInstance"
 			android:theme="@style/StandaloneDialog" />
 		
 		<activity android:name=".TaskInfoDialogActivity"
-			android:screenOrientation="portrait"
 			android:launchMode="singleInstance"
 			android:theme="@style/StandaloneDialog" />
 		
