--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="37"
-      android:versionName="0.3.9.6.1a">
+      android:versionCode="38"
+      android:versionName="0.3.9.7a">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
 
 	<supports-screens
@@ -25,7 +25,7 @@
 
 		<activity android:name=".BoincManagerActivity"
 		    android:theme="@style/Theme.NativeBoincActivity"
-		    android:launchMode="singleTop">
+		    android:launchMode="singleTask">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
